# cchp_physical_env

./: .gitignore  README-zhcn.md  README.md  main.ipynb  main.py  pyproject.toml  uv-installer.sh
cchp-paper/: .latexmkrc  Makefile
cchp-paper/bib/: references.bib
cchp-paper/figures/scientific-figure/: README.md
data/processed/: README.md  cchp_main_15min_2024.manifest.json  cchp_main_15min_2025.manifest.json
data/raw/load/: README.md
data/raw/price/: README.md  catalog.csv
project_document/paper/DrlWithMlp/: README.md  snapshot_2026-03-26_latest_kaggle_mlps.md  snapshot_2026-03-27_latest_kaggle_mlps.md  snapshot_2026-03-29_oracle_and_latest_kaggle_mlps.md  snapshot_2026-03-31_latest_updates.md  (+2 more)
results/: README.md
scripts/debug/: _common.py  _deep.py  _diag_deep.py  _diag_run.py  diag_kpi.py
scripts/file-convert/: xlsx2csv.py
scripts/plot/: generate_latest_kaggle_mlp_figures.py  generate_latest_kaggle_mlp_nature_figures.py  generate_pafc_vs_drl_tables.py  sync_results_submission_archive.py
scripts/process-data/: README.md  build_cchp_main_15min_2024.py  cchp_main_15min_2024_config.json  cchp_main_15min_2025_config.json
scripts/weather-crawl/: oikolab.py
src/cchp_physical_env/: __init__.py  __main__.py
tests/: test_cli_pafc_args.py  test_config_loader_pafc_trust.py  test_gt_network_min_output.py  test_pafc_bes_price_prior.py  test_pafc_bes_warm_start.py  test_pafc_checkpoint_interval.py  test_pafc_economic_teacher_distill.py  test_pafc_eval_window_pool.py  test_pafc_gt_economic_proxy.py  test_pafc_gt_off_deadband.py  test_pafc_surrogate_trust.py
(+108 files in other folders)
