[project]
name = "cchp"
version = "0.1.0"
description = "cchp"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "openpyxl",
  "PyYAML",
  "transformers",
  "tespy",
  "pyomo",
  "CoolProp",
  "tqdm",
]

# torch 不写死在依赖里：请按本机 CUDA/CPU 版本安装

[project.optional-dependencies]
mamba = [
  "mamba-ssm",
]
sb3 = [
  "stable-baselines3",
  "gymnasium",
]
